<resources>
    <string name="app_name">Climatologia del Cafe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Preferencias</string>
    <string name="action_unbind">Desvincular usuario</string>
    <string name="action_exit">Salir</string>

    <!-- Login Screen -->
    <string name="login_title">CAFENICA</string>
    <string name="login_username">Usuario</string>
    <string name="login_button">Autenticar</string>
    <string name="login_password">Contraseña</string>
    <string name="login_subtitle">Asociacion de Cooperativas de Pequeños Productores de Cafe de Nicaragua</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internacionales">Hello International fragment</string>
    <string name="nacionales">Hello National fragment</string>
    <string name="title_activity_login">Inicio de Sesion</string>
    <string name="title_activity_registro">Registro</string>

    <!-- Registro Screen -->
    <string name="celcius">ºC</string>
    <string name="porciento">%</string>
    <string name="ac_save">Guardar</string>

</resources>
