<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/item_navigation_drawer_inbox"
            android:icon="@drawable/home_64"
            android:title="Inicio" />

        <item android:id="@+id/item_navigation_drawer_unbind" android:title="@string/action_unbind"
            android:icon="@drawable/sun_25"/>

        <item android:id="@+id/item_navigation_drawer_exit" android:title="@string/action_exit"
            />
    </group>

    <item android:title="Configuracion">
        <menu>
            <item
                android:id="@+id/item_navigation_drawer_settings"

                android:title="@string/action_settings" />
            <item
                android:id="@+id/item_navigation_drawer_help_and_feedback"

                android:title="Help and feedback" />
        </menu>
    </item>

</menu>